<resources>
    <string name="app_name">DevlandApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="perfil">Perfil</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="title">Drawer Close</string>
    <string name="tecnolog_a">Tecnología:</string>
    <string name="ubicaci_n">Ubicación:</string>
    <string name="n_mero_de_participantes">Número de participantes</string>
    <string name="idioma">Idioma</string>
    <string name="t_tulo_del_proyecto">Título del proyecto</string>
    <string name="descripci_n_del_proyecto">Descripción del proyecto</string>
    <string name="bot_n_seleccionar">Botón seleccionar</string>
    <string-array name="tecnologias">
        <item>C</item>
        <item>C++</item>
        <item>C#</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>HTML y CSS</item>
        <item>Python</item>
        <item>PHP</item>
        <item>JavaScript</item>
        <item>SQL</item>
        <item>Swift</item>
    </string-array>

    <string-array name="idiomas">
        <item>Español</item>
        <item>Frances</item>
        <item>Ingles</item>
        <item>Aleman</item>
        <item>Portugues</item>
        <item>Italiano</item>
        <item>Chino</item>
        <item>Japones</item>
        <item>Ruso</item>
        <item>Arabe</item>
        <item>Coreano</item>
    </string-array>

    <string-array name="tiempo">
        <item>dias</item>
        <item>semanas</item>
        <item>meses</item>
        <item>años</item>
    </string-array>

    <string-array name="modoTrabajo">
        <item>Presencial</item>
        <item>Remoto</item>
        <item>Mixto</item>
    </string-array>

    <string-array name="ubicacion">
        <item>Málaga</item>
        <item>Sevilla</item>
        <item>Granada</item>
        <item>Almeria</item>
        <item>Huelva</item>
        <item>Cordoba</item>
        <item>Cadiz</item>
        <item>Madrid</item>
        <item>Barcelona</item>
    </string-array>



    <!-- Strings para el filtrado -->

    <string-array name="ubicacionFiltrado">
        <item> - </item>
        <item>Málaga</item>
        <item>Sevilla</item>
        <item>Granada</item>
        <item>Almeria</item>
        <item>Huelva</item>
        <item>Cordoba</item>
        <item>Cadiz</item>
        <item>Madrid</item>
        <item>Barcelona</item>
    </string-array>

    <string-array name="modoFiltrado">
        <item> - </item>
        <item>Presencial</item>
        <item>Remoto</item>
        <item>Mixto</item>
    </string-array>

    <string-array name="tecnologiasFiltrado">
        <item> - </item>
        <item>C</item>
        <item>C++</item>
        <item>C#</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>HTML y CSS</item>
        <item>Python</item>
        <item>PHP</item>
        <item>JavaScript</item>
        <item>SQL</item>
        <item>Swift</item>
    </string-array>

    <string-array name="idiomasFiltrado">
        <item> - </item>
        <item>Español</item>
        <item>Frances</item>
        <item>Ingles</item>
        <item>Aleman</item>
        <item>Portugues</item>
        <item>Italiano</item>
        <item>Chino</item>
        <item>Japones</item>
        <item>Ruso</item>
        <item>Arabe</item>
        <item>Coreano</item>
    </string-array>

</resources>