<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".EditarProyectoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="EDITAR UN PROYECTO"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/gris"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etdTiulo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:hint="Título del proyecto"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etdDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/descripci_n_del_proyecto"
                    android:inputType="textMultiLine"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etdparticipantes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/n_mero_de_participantes"
                    android:inputType="number"
                    android:singleLine="false"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tecnolog_a"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/etdtecnologia_nuevoProyecto"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="10sp"
                    android:scrollbarSize="20sp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicaci_n"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/etdubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Modo de trabajo: "
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/etdmodoTrabajo"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_marginStart="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idioma"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/etdidioma"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Duración: "
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etdDuracion"
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:hint="1"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/etdTiempo"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/editar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="16sp"
                android:layout_marginBottom="20sp"
                android:contentDescription="Mis proyectos"
                android:text="Editar"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>